v1.0.2 updated README.md